--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,10 @@ div.flex{
 }
 
 .testo, .p{
-    width: 50%;
+    width: 60%;
+    font-size: 25px;
+    margin-bottom: 50px;
+    line-height: 150%;
 }
 
 /** CTA **/
@@ -100,7 +103,7 @@ button:hover {
 }
 .card{
     background-color: #D9D9D9;
-    padding: 40px;
+    padding: 50pt;
 
 }
 
@@ -109,10 +112,6 @@ div.card p{
 }
 
 strong{
-    background-color: #D9D9D9;
-}
-
-h3{
     background-color: #D9D9D9;
 }
 
@@ -141,7 +140,8 @@ footer a:hover{
 
 /** titoli pagine **/
 h2{
-    text-align: center;
+   margin-bottom: 10px;
+   font-size: 39px;
 }
 
 /** titoli sezione studio **/
