--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ img{
     height: auto;
 }
 
+
 header a{
     text-decoration: none;
     color: black;
@@ -61,8 +62,13 @@ div.grid1{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     margin: 40px auto;
     gap: 35px;
-    max-width: 100%;
+    max-width: 90%;
     height: auto;
+}
+
+section.designer h2{
+    text-align: center;
+    margin-top: 50px;
 }
 
 /**  sezione studio **/
@@ -77,6 +83,20 @@ div.flex{
     font-size: 25px;
     margin-bottom: 50px;
     line-height: 150%;
+    margin-left: 20px;
+}
+
+.testo-progetto{
+    width: 80%;
+    font-size: 25px;
+    line-height: 150%;
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+
+section.progetto p{
+    font-size: 20px;
 }
 
 /** CTA **/
@@ -103,7 +123,7 @@ button:hover {
 }
 .card{
     background-color: #D9D9D9;
-    padding: 50pt;
+    padding: 20pt;
 
 }
 
@@ -138,6 +158,10 @@ footer a:hover{
     color: red;
 }
 
+footer p{
+    font-weight: bold;
+}
+
 /** titoli pagine **/
 h2{
    margin-bottom: 10px;
@@ -155,3 +179,34 @@ h4{
     margin: 0 20px;
 }
 
+.progetto{
+    width: 500px;
+    height: auto;
+    align-items: center;
+    margin: 0 auto;
+    padding: 100px 0;
+    margin: 200px;
+}
+
+.categorie a{
+    text-decoration: none;
+    color: black;
+}
+
+.categorie a:hover{
+    text-decoration: underline;
+    color: red;
+}
+
+.categorie nav ul{
+    list-style-type: none;
+    display: flex;
+    gap: 30px;
+    font-weight: bold;
+    margin-top: 20px ;
+}
+
+.categorie{
+    align-items: center;
+    padding: 20px;
+}
