--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,163 @@ section.email{
     line-height: 2;
 }
 
+/** hamburger **/
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+  }
+  
+a:hover {
+    text-decoration: underline;
+  }
+  
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 15px;
+    color: #fff;
+  }
+  
+  header h1 {
+    font-size: 21px;
+  }
+  
+  /* CSS del Menu */
+  
+  nav {
+    margin:0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    
+  }
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 20px;
+  }
+  
+  nav ul ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  nav ul li {
+    position: relative;
+  }
+  
+  nav ul a {
+    color:black;
+    text-decoration: none;
+  }
+  
+  /* CSS PER HAMBURGER MENU */
+  
+  .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 18px;
+    right: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    opacity: 0;
+  }
+  
+  .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: black;
+  }
+  
+  .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  /* ANIMAZIONE HAMBURGER MENU */
+  
+  input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
+  
+  input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
+  
+  input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
+  
+  /* BOTTONE CHE FA APPARIRE HAMBURGER MENU */
+  
+  .checkbox {
+    position: absolute;
+    display: block;
+    height: 36px;
+    width: 32px;
+    top: 8px;
+    right: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* MOBILE */
+  
+  @media only screen and (max-width: 600px) {
+    .checkbox {
+      display: block;
+    }
+  
+    header {
+      flex-direction: column;
+      align-items: start;
+    }
+  
+    nav {
+      width: 100%;
+    }
+    nav ul {
+      flex-direction: column;
+      opacity: 0;
+      text-align: left;
+      display: none;
+      width: 100%;
+      margin-top: 20px;
+      gap: 10px;
+    }
+  
+    nav ul a {
+      display: block;
+    }
+  
+    input[type="checkbox"]:checked ~ nav ul {
+      opacity: 100;
+      display: flex;
+    }
+  
+    .hamburger-lines {
+      opacity: 100;
+    }
+  }
+  
+
