--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,10 @@ div.flex{
  margin-bottom: 5%;
 }
 
+.testo-progetto p{
+  margin-bottom: 5%;
+}
+
 .testo-progetto{
     width: 80%;
     font-size: 25px;
