--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,14 @@ div.flex{
     margin-top: 100px;
 }
 
+div.flex-designer{
+  display: flex;
+  justify-content: space-between;
+}
 
+.hero-designer{
+  margin-top: 40px;
+}
 
 .testo{
     width: 60%;
