--- a/css/style.css
+++ b/css/style.css
@@ -304,14 +304,6 @@ a:hover {
     text-decoration: underline;
   }
   
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 15px;
-    color: #fff;
-  }
-  
   header h1 {
     font-size: 21px;
   }
@@ -506,6 +498,10 @@ a:hover {
       line-height: 1.5em;
     }
 
+    section.progetto p{
+      max-width: fit-content;
+      margin: 0 0 0 0;
+    }
 
     .img-designer{
       display: none;
@@ -524,7 +520,7 @@ a:hover {
   }
 
   .progetto img{
-    width: 70%;
+    width: 100%;
   }
 
     div.flex{
@@ -534,6 +530,11 @@ a:hover {
 
     div.testo p{
       width: 40ch;
+    }
+
+    div.flex-designer{
+      max-width:fit-content;
+      width: 50ch;
     }
 
     div p{
@@ -547,6 +548,7 @@ a:hover {
     section.progetto {
       margin: 0;
       padding: 50px;
+      width: 100%;
       box-sizing: border-box;
     }
 
